--- a/app/components/folio/console/tiptap/simple_form_wrap_component.sass
+++ b/app/components/folio/console/tiptap/simple_form_wrap_component.sass
@@ -77,10 +77,15 @@
     &,
     .f-input-tiptap,
     .form-group__custom-html,
-    .f-input-tiptap__inner,
-    .f-input-tiptap__iframe
+    .f-input-tiptap__inner
       height: 100% !important
       max-height: 100% !important
+    
+    // Allow iframe height to be set dynamically by JavaScript
+    .f-input-tiptap__iframe
+      width: 100% !important
+      // Remove height: 100% !important to allow dynamic height setting
+      // The JavaScript will set the height based on content
 
   &__editors-bar-scroll-trigger
     align-items: center
